<resources>
    <string name="app_name">VideoShuffle</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_facebook">Facebook</string>
    <string name="action_youtube">Youtube</string>
    <string name="action_preview">Preview</string>
    <string name="action_list">List</string>
    <string name="action_video_playback">Playback</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="facebook_app_id">1074891095854908</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="not_signed_in">Not signed in</string>
    <string name="youtube_upload">YouTube upload</string>
    <string name="youtube_upload_started">YouTube upload started</string>
    <string name="please_try_again">Please try again</string>
    <string name="initiation_started">Initiation Started</string>
    <string name="initiation_completed">Initiation Completed</string>
    <string name="upload_in_progress">Video upload in progress</string>
    <string name="yt_upload_completed">YouTube Upload Completed</string>
    <string name="upload_completed">Upload Completed</string>
    <string name="cant_access_play">Can\'t access to Google Play Services</string>
    <string name="yt_upload_failed">YouTube Upload Failed</string>
    <string name="upload_not_started">Upload Not Started</string>

    <string name="dialog_ok">Ok</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_content_youtube_channel">You need create YouTube Channel first</string>
    <string name="menu_account">Accounts</string>
    <string name="btn_upload">Upload</string>
    <string name="btn_stop">Stop</string>

    <string name="hint_upload_initialed_not_ready">Current account not ready</string>
</resources>
